# Mirror of e2e/examplesTests/stackPresentation.e2e.ts (same 3 its)
appId: org.reactjs.native.example.FabricExample
name: Simple Stack Presentation
---
- launchApp
# it('should go to main screen')
- assertVisible:
    id: "root-screen-example-StackPresentation"
- tapOn:
    id: "root-screen-example-StackPresentation"
- assertVisible:
    id: "stack-presentation-root-scroll-view"

# it('should push form screen')
- tapOn:
    id: "stack-presentation-push-button"
- assertVisible:
    id: "stack-presentation-form-screen-go-back-button"
- tapOn:
    id: "stack-presentation-form-screen-go-back-button"
- assertVisible:
    id: "stack-presentation-root-scroll-view"

# it('should open modal')
- tapOn:
    id: "stack-presentation-modal-button"
- assertVisible:
    id: "stack-presentation-modal-screen-go-back-button"
- tapOn:
    id: "stack-presentation-modal-screen-go-back-button"
- assertVisible:
    id: "stack-presentation-root-scroll-view"
